--- a/app/src/main/res/layout/activity_add_question.xml
+++ b/app/src/main/res/layout/activity_add_question.xml
@@ -84,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextWrong2" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onSendQuestion"
