--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,7 +50,7 @@
         app:srcCompat="@drawable/fragefeuden" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/playerNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
