--- a/app/src/main/res/layout/activity_games.xml
+++ b/app/src/main/res/layout/activity_games.xml
@@ -6,19 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".gamesActivity">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/spel3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Se nuvarande spel här"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Fritt"
+        app:layout_constraintEnd_toEndOf="@+id/spel2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/spel2"
+        app:layout_constraintTop_toBottomOf="@+id/spel2" />
+
+    <Button
+        android:id="@+id/spel2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Fritt"
+        app:layout_constraintEnd_toEndOf="@+id/spel1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/spel1"
+        app:layout_constraintTop_toBottomOf="@+id/spel1" />
 
     <Button
         android:id="@+id/joinGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="52dp"
+        android:onClick="joinGame"
         android:text="Join Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,4 +69,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spel0" />
+
+    <EditText
+        android:id="@+id/joinGameNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toTopOf="@+id/joinGame"
+        app:layout_constraintEnd_toEndOf="@+id/joinGame"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="@+id/joinGame" />
 </androidx.constraintlayout.widget.ConstraintLayout>
