--- a/app/src/main/res/layout/activity_games.xml
+++ b/app/src/main/res/layout/activity_games.xml
@@ -14,6 +14,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
+        android:onClick="continueGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/spel2"
         app:layout_constraintVertical_bias=".03"
@@ -28,6 +29,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
+        android:onClick="continueGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/spel1"
         app:layout_constraintStart_toStartOf="@+id/spel1"
@@ -66,6 +68,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
+        android:onClick="continueGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +83,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
+        android:onClick="continueGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
