Skrivit på gamesActivity //john

--- a/app/src/main/res/layout/activity_games.xml
+++ b/app/src/main/res/layout/activity_games.xml
@@ -14,7 +14,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
-        android:onClick="continueGame"
+        android:onClick="startaSpel3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/spel2"
         app:layout_constraintVertical_bias=".03"
@@ -29,7 +29,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
-        android:onClick="continueGame"
+        android:onClick="startaSpel2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/spel1"
         app:layout_constraintStart_toStartOf="@+id/spel1"
@@ -68,7 +68,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
-        android:onClick="continueGame"
+        android:onClick="startaSpel0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         android:paddingVertical="20dp"
         android:layout_marginHorizontal="20dp"
         android:text="Fritt"
-        android:onClick="continueGame"
+        android:onClick="startaSpel1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
