lite felsökning //Jacob

--- a/app/src/main/res/layout/activity_games.xml
+++ b/app/src/main/res/layout/activity_games.xml
@@ -95,6 +95,7 @@
         android:id="@+id/joinGameNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLength="4"
         android:ems="10"
         android:hint="Spel-ID"
         android:inputType="number"
